WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38695
Missing null check in RenderIFrame::calcWidth() and RenderIFrame::calcHeight()
https://bugs.webkit.org/show_bug.cgi?id=38695
Summary
Missing null check in RenderIFrame::calcWidth() and RenderIFrame::calcHeight()
Ada Chan
Reported
2010-05-06 14:47:59 PDT
In RenderIFrame::calcWidth() and RenderIFrame::calcHeight(), we should null check the result from widget() before accessing it. There's no guarantee that it's not null, and I've seen inconsistently reproducible crashes due to that.
Attachments
Patch
(1.49 KB, patch)
2010-05-06 14:52 PDT
,
Ada Chan
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2010-05-06 14:52:01 PDT
Created
attachment 55302
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2010-05-06 15:36:59 PDT
Comment on
attachment 55302
[details]
Patch r=me
Ada Chan
Comment 3
2010-05-06 15:53:50 PDT
Fixed in
http://trac.webkit.org/changeset/58915
WebKit Review Bot
Comment 4
2010-05-06 18:03:30 PDT
http://trac.webkit.org/changeset/58915
might have broken Qt Windows 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/58912
http://trac.webkit.org/changeset/58913
http://trac.webkit.org/changeset/58914
http://trac.webkit.org/changeset/58915
http://trac.webkit.org/changeset/58916
http://trac.webkit.org/changeset/58917
http://trac.webkit.org/changeset/58918
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug