https://bugs.webkit.org/show_bug.cgi?id=38695

Reviewed by David Kilzer.

Check the result from widget() for NULL before accessing it.

* rendering/RenderIFrame.cpp:
(WebCore::RenderIFrame::calcHeight):
(WebCore::RenderIFrame::calcWidth):



Canonical link: https://commits.webkit.org/50162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58915 268f45cc-cd09-0410-ab3c-d52691b4dbfc