WebCore/rendering/RenderIFrame.cpp
@@ -51,6 +51,8 @@ void RenderIFrame::calcHeight()
 
     if (isScrollable || !style()->height().isFixed()) {
         FrameView* view = static_cast<FrameView*>(widget());
+        if (!view)
+            return;
         int border = borderTop() + borderBottom();
         setHeight(max(height(), view->contentsHeight() + border));
     }
@@ -67,6 +69,8 @@ void RenderIFrame::calcWidth()
 
     if (isScrollable || !style()->width().isFixed()) {
         FrameView* view = static_cast<FrameView*>(widget());
+        if (!view)
+            return;
         int border = borderLeft() + borderRight();
         setWidth(max(width(), view->contentsWidth() + border));
     }
